PyCommon/external_libraries/implicitMassSpringSolver2/log.txt
Physics_LargeVector.cpp: In member function ‘void Physics_LargeVector::Dump(char*)’:
Physics_LargeVector.cpp:198:30: error: ‘OutputDebugString’ was not declared in this scope
   OutputDebugString( szTitle );
                              ^
Physics_LargeVector.cpp:200:17: warning: format not a string literal and no format arguments [-Wformat-security]
   printf(szTitle);
                 ^
Physics_LargeVector.cpp:209:29: error: ‘OutputDebugString’ was not declared in this scope
   OutputDebugString( szTemp );
                             ^
Physics_LargeVector.cpp:211:16: warning: format not a string literal and no format arguments [-Wformat-security]
   printf(szTemp);
                ^
Physics_Matrix3x3.cpp: In member function ‘void Physics_Matrix3x3::Dump(char*)’:
Physics_Matrix3x3.cpp:198:32: error: ‘OutputDebugString’ was not declared in this scope
   OutputDebugString( szHeading );
                                ^
Physics_Matrix3x3.cpp:200:19: warning: format not a string literal and no format arguments [-Wformat-security]
   printf(szHeading);
                   ^
Physics_Matrix3x3.cpp:206:29: error: ‘OutputDebugString’ was not declared in this scope
   OutputDebugString( szTemp );
                             ^
Physics_Matrix3x3.cpp:208:16: warning: format not a string literal and no format arguments [-Wformat-security]
   printf(szTemp);
                ^
Physics_ParticleSystem.cpp: In member function ‘void Physics_ParticleSystem::SetupMatrices()’:
Physics_ParticleSystem.cpp:95:2: error: ‘DWORD’ was not declared in this scope
  DWORD dwTimeIn = GetTickCount(), dwTimeOut;
  ^
Physics_ParticleSystem.cpp:130:2: error: ‘dwTimeOut’ was not declared in this scope
  dwTimeOut = GetTickCount();
  ^
Physics_ParticleSystem.cpp:130:27: error: ‘GetTickCount’ was not declared in this scope
  dwTimeOut = GetTickCount();
                           ^
Physics_ParticleSystem.cpp:132:59: error: ‘dwTimeIn’ was not declared in this scope
  sprintf( szTemp, "Initialize: %lu msec\r\n", dwTimeOut - dwTimeIn );
                                                           ^
Physics_ParticleSystem.cpp:133:28: error: ‘OutputDebugString’ was not declared in this scope
  OutputDebugString( szTemp );
                            ^
Physics_ParticleSystem.cpp: In member function ‘void Physics_ParticleSystem::Update_Explicit(float)’:
Physics_ParticleSystem.cpp:181:8: warning: name lookup of ‘i’ changed
   for( i=0; i<m_iInverseIterations; i++ )
        ^
Physics_ParticleSystem.cpp:144:6: warning:   matches this ‘i’ under ISO standard rules
  int i;
      ^
Physics_ParticleSystem.cpp:158:11: warning:   matches this ‘i’ under old rules
   for(int i=0, ni=m_Forces.size(); i<ni; i++)
           ^
Physics_ParticleSystem.cpp: In member function ‘void Physics_ParticleSystem::Update_Implicit(float)’:
Physics_ParticleSystem.cpp:1320:8: warning: name lookup of ‘i’ changed
   for( i=0; i<m_iParticles; i++ )
        ^
Physics_ParticleSystem.cpp:1175:6: warning:   matches this ‘i’ under ISO standard rules
  int i, iIterations = 0, iMaxIterations = (int)sqrt(double(m_iParticles))+3;
      ^
Physics_ParticleSystem.cpp:1200:11: warning:   matches this ‘i’ under old rules
   for(int i=0, ni=m_Forces.size(); i<ni; i++)
           ^
Physics_ParticleSystem.cpp:1340:23: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
    m_b.Dump( "b:\r\n" );
                       ^
Physics_ParticleSystem.cpp:1341:23: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
    m_P.Dump( "P:\r\n" );
                       ^
Physics_ParticleSystem.cpp:1342:99: error: ‘OutputDebugString’ was not declared in this scope
    OutputDebugString( "Negative Delta_0 most likely caused by a non-Positive Definite matrix\r\n" );
                                                                                                   ^
Physics_ParticleSystem.cpp:1358:24: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
    m_b.Dump( "b: \r\n" );
                        ^
Physics_ParticleSystem.cpp:1359:24: warning: deprecated conversion from string constant to ‘char*’ [-Wwrite-strings]
    m_P.Dump( "P: \r\n" );
                        ^
Physics_ParticleSystem.cpp:1360:87: error: ‘OutputDebugString’ was not declared in this scope
    OutputDebugString( "This isn't good!  Probably a non-Positive Definite matrix\r\n" );
                                                                                       ^
Physics_ParticleSystem.cpp: In member function ‘void Physics_ParticleSystem::Update_SemiImplicit(float)’:
Physics_ParticleSystem.cpp:1477:8: warning: name lookup of ‘i’ changed
   for( i=0; i<m_iParticles; i++ )
        ^
Physics_ParticleSystem.cpp:1424:6: warning:   matches this ‘i’ under ISO standard rules
  int i;
      ^
Physics_ParticleSystem.cpp:1462:11: warning:   matches this ‘i’ under old rules
   for(int i=0, ni=m_Forces.size(); i<ni; i++)
           ^
Physics_SparseSymmetricMatrix.cpp: In constructor ‘Physics_SparseSymmetricMatrix::Physics_SparseSymmetricMatrix(int, int)’:
Physics_SparseSymmetricMatrix.cpp:16:24: error: ‘max’ was not declared in this scope
  iRows = max( 1, iRows );
                        ^
Physics_SparseSymmetricMatrix.cpp:16:24: note: suggested alternative:
In file included from /usr/include/c++/5/vector:60:0,
                 from Physics_SparseSymmetricMatrix.h:12,
                 from Physics.h:118,
                 from DRGShell.h:58,
                 from Physics_SparseSymmetricMatrix.cpp:5:
/usr/include/c++/5/bits/stl_algobase.h:265:5: note:   ‘std::max’
     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
     ^
Physics_SparseSymmetricMatrix.cpp: In member function ‘void Physics_SparseSymmetricMatrix::Dump(char*)’:
Physics_SparseSymmetricMatrix.cpp:332:30: error: ‘OutputDebugString’ was not declared in this scope
   OutputDebugString( szTitle );
                              ^
Physics_SparseSymmetricMatrix.cpp:334:17: warning: format not a string literal and no format arguments [-Wformat-security]
   printf(szTitle);
                 ^
Physics_SparseSymmetricMatrix.cpp:339:28: error: ‘OutputDebugString’ was not declared in this scope
  OutputDebugString( szTemp );
                            ^
Physics_SparseSymmetricMatrix.cpp:341:15: warning: format not a string literal and no format arguments [-Wformat-security]
  printf(szTemp);
               ^
Physics_SparseSymmetricMatrix.cpp:360:19: warning: format not a string literal and no format arguments [-Wformat-security]
      printf(szTemp);
                   ^
Physics_SymmetricMatrix.cpp: In constructor ‘Physics_SymmetricMatrix::Physics_SymmetricMatrix(int)’:
Physics_SymmetricMatrix.cpp:16:24: error: ‘max’ was not declared in this scope
  iRows = max( 1, iRows );
                        ^
Physics_SymmetricMatrix.cpp:16:24: note: suggested alternative:
In file included from /usr/include/c++/5/vector:60:0,
                 from Physics_SparseSymmetricMatrix.h:12,
                 from Physics.h:118,
                 from DRGShell.h:58,
                 from Physics_SymmetricMatrix.cpp:5:
/usr/include/c++/5/bits/stl_algobase.h:265:5: note:   ‘std::max’
     max(const _Tp& __a, const _Tp& __b, _Compare __comp)
     ^
Physics_SymmetricMatrix.cpp: In member function ‘void Physics_SymmetricMatrix::Dump(char*)’:
Physics_SymmetricMatrix.cpp:156:30: error: ‘OutputDebugString’ was not declared in this scope
   OutputDebugString( szTitle );
                              ^
Physics_SymmetricMatrix.cpp:158:16: warning: format not a string literal and no format arguments [-Wformat-security]
   printf(szTemp);
                ^
Physics_SymmetricMatrix.cpp:162:28: error: ‘OutputDebugString’ was not declared in this scope
  OutputDebugString( szTemp );
                            ^
Physics_SymmetricMatrix.cpp:164:15: warning: format not a string literal and no format arguments [-Wformat-security]
  printf(szTemp);
               ^
Physics_SymmetricMatrix.cpp:176:17: warning: format not a string literal and no format arguments [-Wformat-security]
    printf(szTemp);
                 ^
Physics_SymmetricMatrix.cpp: In member function ‘bool Physics_SymmetricMatrix::Invert()’:
Physics_SymmetricMatrix.cpp:242:45: error: ‘OutputDebugString’ was not declared in this scope
    OutputDebugString( "Singular Matrix\r\n" );
                                             ^
